--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="{% static '' %}" alt="Smart Auction Logo">
+            <img src="{% static 'images/logo.png' %}" alt="Smart Auction Logo">
         </div>
         <div class="header-title">
             <h1>Auction System</h1>
