--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Auction - Login</title>
-    <link rel="stylesheet" href="{% static 'login.css' %}">
+    <link rel="stylesheet" href="{% static 'register.css' %}">
 </head>
 <body>
     <header>
@@ -18,16 +18,13 @@
     </header>
     <div class="container">
         <div class="login-form">
-            <h2>Login In</h2>
+            <h2>Sign Up</h2>
             <form>
                 <input type="email" placeholder="Email" required>
                 <input type="password" placeholder="Password" required>
-                <div class="remember-me">
-                    <input type="checkbox" id="remember">
-                    <label for="remember">Remember me</label>
-                </div>
-                <button type="submit">Login</button>
-                <p>Don’t have an account? <a href="{% url 'register' %}">Register</a></p>
+                <input type="password" placeholder="Confirm Password" required>
+                <button type="submit">SignIn</button>
+                <p>Already have an account? <a href="{% url 'login' %}">LogIn</a></p>
             </form>
         </div>
     </div>
