--- a/static/bid.css
+++ b/static/bid.css
@@ -18,6 +18,8 @@ header {
     padding: 20px 40px;
     position: absolute;
     top: 0;
+    background-color: #f1c40f;
+    height: 40px;
 }
 
 .logo {
@@ -31,13 +33,20 @@ header {
     height: 50px;
 }
 
-header {
+
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #ffffff;
+}
+
+ header {
     background-color: #f1c40f;
     padding: 10px 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
+} 
 
 .logo img {
     width: 50px;
@@ -74,23 +83,29 @@ nav ul li a {
     padding-right: 25px;
 }
 
-
-
-
-
-
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
+
+
+
+
+
+
 
 /* Main Product Section */
 .product-section {
     display: flex;
     align-items: flex-start;
     gap: 20px;
-    margin-bottom: 40px;
-    padding-top: 30%;
+   
+
 }
 
 .main-image {
@@ -101,16 +116,20 @@ nav ul li a {
 
 .product-info {
     flex: 1;
-    padding: 20px;
+    padding: 10px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+    margin-top: 100px;
+    
+    
 }
 
 .product-info h2 {
     font-size: 24px;
     color: #333;
     margin-bottom: 20px;
+
 }
 
 .product-info .description {
@@ -118,6 +137,7 @@ nav ul li a {
     color: #666;
     line-height: 1.5;
     margin-bottom: 30px;
+    
 }
 
 .bid-btn {
@@ -129,37 +149,54 @@ nav ul li a {
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin: 0 0 20px 20px;
 }
 
 .bid-btn:hover {
     background-color: #6f482d;
 }
 
-/* Other Products Section */
-.other-products {
+.bidding-section {
+    margin-top: 30px;
     display: flex;
-    flex-direction: column;
-    gap: 20px;
-    
+    align-items: center;
+    gap: 10px;
 }
 
-.product {
+.bidding-section input {
+    padding: 10px;
+    width: 250px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
+.bidding-actions {
     display: flex;
-    gap: 20px;
+    gap: 10px;
 }
 
-.thumb-image {
-    width: 120px;
-    height: auto;
-    border-radius: 10px;
+.cancel-btn,
+.confirm-btn {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
-.product-info h3 {
-    font-size: 18px;
-    color: #333;
+.cancel-btn {
+    background-color: #bcbcbc;
+    color: white;
 }
 
-.product-info p {
-    font-size: 14px;
-    color: #666;
+.cancel-btn:hover {
+    background-color: #999;
+}
+
+.confirm-btn {
+    background-color: #8b5e3c;
+    color: white;
+}
+
+.confirm-btn:hover {
+    background-color: #6f482d;
 }
