--- a/static/register.css
+++ b/static/register.css
@@ -104,3 +104,22 @@ button:hover {
 .login-form a:hover {
     text-decoration: underline;
 }
+label {
+    font-size: 18px;
+    font-weight: bold;
+    margin-right: 10px;
+}
+select {
+    padding: 10px;
+    font-size: 16px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    color: #333;
+    cursor: pointer;
+}
+select:focus {
+    border-color: #4CAF50;
+    outline: none;
+    background-color: #fff;
+}
