--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -19,9 +19,10 @@
     <div class="container">
         <div class="login-form">
             <h2>Login In</h2>
-            <form>
-                <input type="email" placeholder="Email" required>
-                <input type="password" placeholder="Password" required>
+            <form method = "POST">
+                {% csrf_token %}
+                <input name = "email" type="email" placeholder="Email" required>
+                <input name = "password" type="password" placeholder="Password" required>
                 <div class="remember-me">
                     <input type="checkbox" id="remember">
                     <label for="remember">Remember me</label>
