--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -19,11 +19,17 @@
     <div class="container">
         <div class="login-form">
             <h2>Sign Up</h2>
-            <form>
-                <input type="email" placeholder="Email" required>
-                <input type="password" placeholder="Password" required>
-                <input type="password" placeholder="Confirm Password" required>
-                <button type="submit">SignIn</button>
+            <form method = "POST">
+                {% csrf_token %}
+                <label for="options">Choose Role:</label>
+                <select id="options" name="role">
+                    <option value="Bidder">Bidder</option>
+                    <option value="Auctioneer">Auctioneer</option>
+                </select><br />
+                <input type="email" name = "email" placeholder="Email" required>
+                <input type="password" name = "password" placeholder="Password" required>
+                <input type="password" name = "confirm_password" placeholder="Confirm Password" required>
+                <button type="submit">Register</button>
                 <p>Already have an account? <a href="{% url 'login' %}">LogIn</a></p>
             </form>
         </div>
