--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="{% static 'login.css' %}">
 </head>
 <body>
+    {% if message %}
+    {% include "helper/msg.html" %}
+    {% endif %}
     <header>
         <div class="logo">
             <img src="{% static 'images/logo.png' %}" alt="Smart Auction Logo">
