--- a/templates/helper/msg.html
+++ b/templates/helper/msg.html
@@ -7,7 +7,6 @@
       padding: 15px;
       position: fixed;
       top: 20px;
-      right: 20px;
       z-index: 1;
       border-radius: 5px;
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -32,7 +31,7 @@
 
 <!-- Popup Message Div -->
 <div id="popup" class="popup-message">
-  Successfully logged in!
+  {{message}}
 </div>
 
 <!-- JavaScript to show the message for 5 seconds -->
