--- a/templates/product/bid.html
+++ b/templates/product/bid.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="{% static 'bid.css' %}">
 </head>
 <body>
+    {% if messages %}
+    {% for message in messages %}
+    {% include "helper/msg.html" %}
+    {% endfor %}
+    {% endif %}
     <header>
         <div class="logo">
             <img src="{% static 'images/logo.png' %}" alt="Auction Logo">
