--- a/templates/seller/add_product.html
+++ b/templates/seller/add_product.html
@@ -47,28 +47,28 @@
 
         <!-- Form Section -->
         <section class="form-section">
-            <form>
+            <form method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
                 <label for="title">Title*</label>
                 <input type="text" id="title" name="title" required>
-
-                <label for="category">Category*</label>
-                <select id="category" name="category" required>
-                    <option value="">Select Category</option>
-                    <!-- Add options here -->
-                </select>
 
                 <label for="description">Description*</label>
                 <textarea id="description" name="description" required></textarea>
 
+                <label for="price">Starting Price*</label>
+                <input type="integer" id="price" name="price" required>
+                <br /><br />
                 <label for="picture">Picture*</label>
                 <input type="file" id="picture" name="picture" required>
 
+                <label for="date">Date*</label>
+                <input type="date" id="date" name="date" required>
+                <br /><br />
                 <label for="time">Time*</label>
-                <input type="text" id="time" name="time" required>
-
+                <input type="time" id="time" name="time" required>
+                <br /><br />
                 <div class="form-actions">
-                    <button type="button" class="discard">Discard</button>
-                    <button type="submit" class="continue">Continue</button>
+                    <button type="submit" class="continue">Add</button>
                 </div>
             </form>
         </section>
