--- a/templates/product/bid.html
+++ b/templates/product/bid.html
@@ -39,10 +39,13 @@
                 </p>
                 <div class="bidding-section">
                     <h4>Start bidding</h4>
-                    <input type="integer" min="{{product.starting_price}}" value="{{product.starting_price}}" placeholder="Place Your Bidding Amount">
+                    <form action="" method="post">
+                        {% csrf_token %}
+                    <input name = "bid_price" type="integer" min="{{product.starting_price}}" value="{{product.starting_price}}" placeholder="Place Your Bidding Amount">
                     <div class="bidding-actions">
-                        <button class="confirm-btn">Bid</button>
+                        <button type="submit" class="confirm-btn">Bid</button>
                     </div>
+                    </form>
                 </div>
             </div>
         </div>
