--- a/static/edit_profile.css
+++ b/static/edit_profile.css
@@ -53,7 +53,7 @@ nav ul li a {
 
 /* Sidebar */
 aside {
-    width: 250px;
+    width: 300px;
     background-color: #f0f0f0;
     padding: 20px;
 }
@@ -69,6 +69,8 @@ aside {
 }
 
 .profile p {
+    width: 150px;
+    text-overflow: ellipsis;
     font-size: 18px;
     font-weight: bold;
 }
