--- a/templates/authentication/edit_profile.html
+++ b/templates/authentication/edit_profile.html
@@ -34,13 +34,20 @@
         <aside>
             <div class="profile">
                 <img src="{% static 'images/profile.png' %}" alt="Profile Image">
-                <p>auctioneer@gmail.com</p>
-                <a href="#">Edit Profile</a>
+                <p>{{user.email}}</p>
+                <a href="{% url 'profile' %}">Edit Profile</a>
             </div>
+            {% if user.role == "Bidder" %}
+            <ul class="sidebar-menu">
+                <li><a href="#">Bids</a></li>
+                <li><a href="#">Bids Won</a></li>
+            </ul>
+            {% else %}
             <ul class="sidebar-menu">
                 <li><a href="#">Add Products</a></li>
                 <li><a href="#">Your Products</a></li>
             </ul>
+            {% endif %}
         </aside>
 
         <!-- Form Section -->
@@ -49,16 +56,16 @@
                 {% csrf_token %}
                 
                 <label for="email">Change Email</label>
-                <input type="email" id="email" name="email" required>
+                <input placeholder="{{user.email}}" type="email" id="email" name="email">
 
                 <label for="email">Confirm Email</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="confirm_email">
 
                 <label for="password">Change Password</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password">
 
                 <label for="password">Confirm Password</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="confirm_password">
 
                 <div class="form-actions">
                     <button type="submit" class="continue">Save</button>
