--- a/templates/seller/add_product.html
+++ b/templates/seller/add_product.html
@@ -23,7 +23,7 @@
         <nav>
             <ul>
                 <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href="#">Profile</a></li>
+                <li><a href="{% url 'profile' %}">Profile</a></li>
                 <li><a href="{% url 'logout' %}">Logout</a></li>
             </ul>
         </nav>
@@ -35,13 +35,11 @@
             <div class="profile">
                 <img src="{% static 'images/profile.png' %}" alt="Profile Image">
                 <p>Naresh Tamang</p>
-                <a href="#">Edit Profile</a>
+                <a href="{% url 'profile' %}">Edit Profile</a>
             </div>
             <ul class="sidebar-menu">
-                <li><a href="#">Add Products</a></li>
-                <li><a href="#">Sold Products</a></li>
-                <li><a href="#">To be Sold</a></li>
-                <li><a href="#">Your Products</a></li>
+                <li><a href="{% url 'your product' %}">Your Products</a></li>
+                <li><a href="{% url 'add product' %}">Add Products</a></li>
             </ul>
         </aside>
 
