--- a/templates/seller/win.html
+++ b/templates/seller/win.html
@@ -23,7 +23,7 @@
         <nav>
             <ul>
                 <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href="#">Profile</a></li>
+                <li><a href="{% url 'profile' %}">Profile</a></li>
                 <li><a href="{% url 'logout' %}">Logout</a></li>
             </ul>
         </nav>
@@ -35,7 +35,7 @@
             <div class="profile">
                 <img src="{% static 'images/profile.png' %}" alt="Profile Image">
                 <p>Naresh Tamang</p>
-                <a href="#">Edit Profile</a>
+                <a href="{% url 'profile' %}">Edit Profile</a>
             </div>
             <ul class="sidebar-menu">
                 <li><a href="#">Bids</a></li>
