--- a/static/add_product.css
+++ b/static/add_product.css
@@ -51,12 +51,17 @@ nav ul li a {
     display: flex;
 }
 
-/* Sidebar */
 aside {
-    width: 250px;
     background-color: #f0f0f0;
-    padding: 20px;
+    position: fixed;
+    padding-top: 50px;
+    top: 75px;
+    left: 0;
+    width: 300px; /* Set a width for the sidebar */
+    height: 100vh;
 }
+
+
 
 .profile {
     text-align: center;
