--- a/static/edit_profile.css
+++ b/static/edit_profile.css
@@ -51,12 +51,16 @@ nav ul li a {
     display: flex;
 }
 
-/* Sidebar */
 aside {
-    width: 300px;
     background-color: #f0f0f0;
-    padding: 20px;
+    position: fixed;
+    padding-top: 50px;
+    top: 75px;
+    left: 0;
+    width: 300px; /* Set a width for the sidebar */
+    height: 100vh;
 }
+
 
 .profile {
     text-align: center;
@@ -137,4 +141,30 @@ button {
 button.continue {
     background-color: #a17951;
     color: white;
+}
+/* Profile Section */
+.profile-section {
+    background-color: #f3f3f3;
+    padding: 15px;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
+}
+
+.profile-section h2 {
+    font-size: 22px;
+    color: #333;
+    margin-bottom: 12px;
+    font-weight: bold;
+}
+
+.profile-section p {
+    font-size: 16px;
+    color: #555;
+    margin: 6px 0;
+    line-height: 1.5;
+}
+
+.profile-section p strong {
+    color: #333;
 }
