--- a/static/home.css
+++ b/static/home.css
@@ -57,11 +57,11 @@ header {
 .search-bar {
     flex-grow: 1;
     margin-left: 100px;
-    margin-right: 60%;
+    margin-right: 10%;
 }
 
 .search-bar input {
-    width: 100%;
+    width: 400px;
     padding: 10px;
     border-radius: 5px;
     border: none;
@@ -70,10 +70,12 @@ header {
 
 nav ul {
     list-style-type: none;
-    margin: 0px;
     padding: 0;
+    margin: 0;
     display: flex;
     gap: 20px;
+    width: 700px;
+    
 }
 
 nav ul li a {
