--- a/templates/product/your_product.html
+++ b/templates/product/your_product.html
@@ -13,34 +13,24 @@
     {% include "helper/msg.html" %}
     {% endfor %}
     {% endif %}
-    <header>
+    <header style="height: 50px;">
         <div class="logo">
             <img src="{% static 'images/logo.png' %}" alt="Auction Logo">
         </div>
         <div class="search-bar">
-            <input type="text" placeholder="Search">
         </div>
         <nav>
             <ul>
                 <li><a href="{% url 'home' %}">Home</a></li>
                 <li><a href="{% url 'profile' %}">Profile</a></li>
+                <li><a href="{% url 'your product' %}">Your Products</a></li>
+                <li><a href="{% url 'add product' %}">Add Products</a></li>
                 <li><a href="{% url 'logout' %}">Logout</a></li>
             </ul>
         </nav>
     </header>
-    <div class="container">
-        <aside>
-            <div class="profile">
-                <img src="{% static 'images/profile.png' %}" alt="Profile Image">
-                <p>Naresh Tamang</p>
-                <a href="{% url 'profile' %}">Edit Profile</a>
-            </div>
-            <ul class="sidebar-menu">
-                <li><a href="{% url 'your product' %}">Your Products</a></li>
-                <li><a href="{% url 'add product' %}">Add Products</a></li>
-            </ul>
-        </aside>
-        <div class="grid-container" style="margin-top: 100px;">
+    <div class="container" style="margin-top: 80px;">
+        <div class="grid-container">
             {% for product in products %}
             <div class="grid-item" style="height: 500px; width: 400px;">
                 <img src="{{ product.picture.url }}" alt="Plain White T-shirt" style="height: 300px; width: 500px;">
@@ -50,7 +40,7 @@
                 {% else %}
                 <div class="status in-auction">Not Sold</div>
                 {% endif %}                
-                <p>Start Date: {{ product.created_date }}</p>
+                <p>Start Date: {{ product.created_at|date:"M. j, Y" }}</p>
                 <p>End Date: {{ product.bidding_ending_date }}</p>
                 <p>End Time: {{ product.bidding_ending_time }}</p>
                 <p>Price: {{product.starting_price}}</p>
