--- a/templates/product/home.html
+++ b/templates/product/home.html
@@ -49,7 +49,9 @@
             <p><b>End Date:</b> {{ product.product.bidding_ending_date }}</p>
             <p><b>End Time:</b> {{ product.product.bidding_ending_time }}</p>
             <p><b>Price:</b> {{product.product.starting_price}}</p>
+            {% if user.role == "Bidder" %}
             <a href="{% url 'bid' product.product.id %}" style="text-decoration: none;"><button style="width: 200px;">Bid</button></a>
+            {% endif %}
         </div>
         {% endfor %}
     </div>
